--- a/index.html
+++ b/index.html
@@ -63,66 +63,56 @@
       showRoundFiveResult();
 
       if ((roundOne + roundTwo + roundThree + roundFour + roundFive) > 0) {
-        console.log('You win!');
+        alert('You win!');
       } else if ((roundOne + roundTwo + roundThree + roundFour + roundFive) == 0) {
-        console.log('Draw!');
+        alert('Draw!');
       } else {
-        console.log('You lose!');
+        alert('You lose!');
       }
       
     function showRoundOneResult() {
       if (roundOne == 1) {
-        console.log('You Win this round!');
+        alert('You Win this round!');
       } else if (roundOne == 0) {
-        console.log('This round is a draw!');
+        alert('This round is a draw!');
       } else if (roundOne == -1) {
-        console.log('You lose this round!');
-      } else {
-        console.log('Invaild input')
+        alert('You lose this round!');
       }
     }
     function showRoundTwoResult() {
       if (roundTwo == 1) {
-        console.log('You Win this round!');
+        alert('You Win this round!');
       } else if (roundTwo == 0) {
-        console.log('This round is a draw!');
+        alert('This round is a draw!');
       } else if (roundTwo == -1) {
-        console.log('You lose this round!');
-      } else {
-        console.log('Invaild input')
+        alert('You lose this round!');
       }
     }
     function showRoundThreeResult() {
       if (roundThree == 1) {
-        console.log('You Win this round!');
+        alert('You Win this round!');
       } else if (roundThree == 0) {
-        console.log('This round is a draw!');
+        alert('This round is a draw!');
       } else if (roundThree == -1) {
-        console.log('You lose this round!');
-      } else {
-        console.log('Invaild input')
+        alert('You lose this round!');
       }
     }
     function showRoundFourResult() {
       if (roundFour == 1) {
-        console.log('You Win this round!');
+        alert('You Win this round!');
       } else if (roundFour == 0) {
-        console.log('This round is a draw!');
+        alert('This round is a draw!');
       } else if (roundFour == -1) {
-        console.log('You lose this round!');
-      } else {
-        console.log('Invaild input')
+        alert('You lose this round!');
       }
     }
     function showRoundFiveResult() {
       if (roundFive == 1) {
-        console.log('You Win this round!');
+        alert('You Win this round!');
       } else if (roundFive == 0) {
-        console.log('This round is a draw!');
+        alert('This round is a draw!');
       } else if (roundFour == -1) {
-        console.log('You lose this round!');
-      } else {
-        console.log('Invaild input')
+        alert('You lose this round!');
       }
     }
     }
