--- a/index.html
+++ b/index.html
@@ -5,11 +5,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
+  <link rel="stylesheet" href="style/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <div id="container">
+
+    <div id="main-game">
+      <a id="rock" class="btn">ROCK</a>
+      <a id="paper" class="btn">PAPER</a>
+      <a id="scissors" class="btn">SCISSORS</a>
+    </div>
+
+    <div id="scoreboard">
+    </div>
+
+  </div>
 
   <script>
+
+    const rock = document.getElementById('rock');
+    const paper = document.getElementById('paper');
+    const scissors = document.getElementById('scissors');
+    const btn = document.querySelectorAll('a');
+    const scoreBoard = document.querySelector('div#scoreboard');
+
+    let score = 0;
+    let runtime = 0;
+
+    // if the amount of the para is > 5, then trigger the score
+
+    rock.addEventListener('click', function () {
+      playRound('rock', computerPlay());
+      count();
+    });
+    paper.addEventListener('click', function () {
+      playRound('paper', computerPlay());
+      count();
+    });
+    scissors.addEventListener('click', function () {
+      playRound('scissors', computerPlay());
+      count();
+    });
+
+
 
     function drawNum() {
       return Math.floor(Math.random() * 3);
@@ -17,109 +58,100 @@
 
     function computerPlay() {
       if (drawNum() == 0) {
-        return 'ROCK';
+        return 'rock';
       } else if (drawNum() == 1) {
-        return 'PAPER';
+        return 'paper';
       } else {
-        return 'SCISSORS';
+        return 'scissors';
       }
     }
 
     function playRound(playerSelection, computerSelection) {
 
-      playerSelection = playerSelection.toUpperCase();
-
-      if (playerSelection == 'ROCK' && computerSelection == 'SCISSORS') {
-        return 1;
-      } else if (playerSelection == 'PAPER' && computerSelection == 'ROCK') {
-        return 1;
-      } else if (playerSelection == 'SCISSORS' && computerSelection == 'PAPER') {
-        return 1;
+      if (playerSelection == 'rock' && computerSelection == 'scissors') {
+        let para = document.createElement("p");
+        para.innerHTML = `The computer has selected ${computerSelection}, You win!`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        document.getElementById("scoreboard").appendChild(para);
+        return [score = score + 1, runtime = runtime + 1];
+      } else if (playerSelection == 'paper' && computerSelection == 'rock') {
+        let para = document.createElement("p");
+        para.innerHTML = `The computer has selected ${computerSelection}, You win!`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        document.getElementById("scoreboard").appendChild(para);
+        return [score = score + 1, runtime = runtime + 1];
+      } else if (playerSelection == 'scissors' && computerSelection == 'paper') {
+        let para = document.createElement("p");
+        para.innerHTML = `The computer has selected ${computerSelection}, You win!`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        document.getElementById("scoreboard").appendChild(para);
+        return [score = score + 1, runtime = runtime + 1];
       } else if (playerSelection == computerSelection) {
-        return 0;
-      } else if (playerSelection == 'ROCK' && computerSelection == 'PAPER') {
-        return -1;
-      } else if (playerSelection == 'PAPER' && computerSelection == 'SCISSORS') {
-        return -1;
-      } else if (playerSelection == 'SCISSORS' && computerSelection == 'ROCK') {
-        return -1;
-      } else {
-        alert('Error - Please enter valid words!');
+        let para = document.createElement("p");
+        para.innerHTML = `The computer has selected ${computerSelection}, Draw!`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        document.getElementById("scoreboard").appendChild(para);
+        return [score = score + 0, runtime = runtime + 1];
+      } else if (playerSelection == 'rock' && computerSelection == 'paper') {
+        let para = document.createElement("p");
+        para.innerHTML = `The computer has selected ${computerSelection}, You Lose!`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        document.getElementById("scoreboard").appendChild(para);
+        return [score = score - 1, runtime = runtime + 1];
+      } else if (playerSelection == 'paper' && computerSelection == 'scissors') {
+        let para = document.createElement("p");
+        para.innerHTML = `The computer has selected ${computerSelection}, You Lose!`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        document.getElementById("scoreboard").appendChild(para);
+        return [score = score - 1, runtime = runtime + 1];
+      } else if (playerSelection == 'scissors' && computerSelection == 'rock') {
+        let para = document.createElement("p");
+        para.innerHTML = `The computer has selected ${computerSelection}, You Lose!`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        document.getElementById("scoreboard").appendChild(para);
+        return [score = score - 1, runtime = runtime + 1];
+      }
+    }
+
+    function displayWinner() {
+
+      if (score > 0) {
+        let para = document.createElement("p");
+        para.innerHTML = `You win! Your won ${score} round.`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        para.style.transition = '0.3s';
+        document.getElementById("scoreboard").appendChild(para);
+      } else if (score == 0) {
+        let para = document.createElement("p");
+        para.innerHTML = `Draw! Your won ${score} round.`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        para.style.transition = '0.3s';
+        document.getElementById("scoreboard").appendChild(para);
+      } else if (score < 0) {
+        let para = document.createElement("p");
+        para.innerHTML = `You Lose! Your won ${score} round.`;
+        para.style.color = 'White';
+        para.style.padding = '20px';
+        para.style.transition = '0.3s';
+        document.getElementById("scoreboard").appendChild(para);
       }
     }
 
 
-    function game() {
-
-      let roundOne = playRound(prompt('Rock, Paper or Scissors?', ''), computerPlay());
-      showRoundOneResult();
-      roundTwo = playRound(prompt('Rock, Paper or Scissors?', ''), computerPlay());
-      showRoundTwoResult();
-      roundThree = playRound(prompt('Rock, Paper or Scissors?', ''), computerPlay());
-      showRoundThreeResult();
-      roundFour = playRound(prompt('Rock, Paper or Scissors?', ''), computerPlay());
-      showRoundFourResult();
-      roundFive = playRound(prompt('Rock, Paper or Scissors?', ''), computerPlay());
-      showRoundFiveResult();
-
-      if ((roundOne + roundTwo + roundThree + roundFour + roundFive) > 0) {
-        alert('You win!');
-      } else if ((roundOne + roundTwo + roundThree + roundFour + roundFive) == 0) {
-        alert('Draw!');
-      } else {
-        alert('You lose!');
-      }
-      
-    function showRoundOneResult() {
-      if (roundOne == 1) {
-        alert('You Win this round!');
-      } else if (roundOne == 0) {
-        alert('This round is a draw!');
-      } else if (roundOne == -1) {
-        alert('You lose this round!');
+    function count() {
+      if (runtime % 5 == 0) {
+        displayWinner();
       }
     }
-    function showRoundTwoResult() {
-      if (roundTwo == 1) {
-        alert('You Win this round!');
-      } else if (roundTwo == 0) {
-        alert('This round is a draw!');
-      } else if (roundTwo == -1) {
-        alert('You lose this round!');
-      }
-    }
-    function showRoundThreeResult() {
-      if (roundThree == 1) {
-        alert('You Win this round!');
-      } else if (roundThree == 0) {
-        alert('This round is a draw!');
-      } else if (roundThree == -1) {
-        alert('You lose this round!');
-      }
-    }
-    function showRoundFourResult() {
-      if (roundFour == 1) {
-        alert('You Win this round!');
-      } else if (roundFour == 0) {
-        alert('This round is a draw!');
-      } else if (roundFour == -1) {
-        alert('You lose this round!');
-      }
-    }
-    function showRoundFiveResult() {
-      if (roundFive == 1) {
-        alert('You Win this round!');
-      } else if (roundFive == 0) {
-        alert('This round is a draw!');
-      } else if (roundFour == -1) {
-        alert('You lose this round!');
-      }
-    }
-    }
-
-    game();
-
-
 
   </script>
 </body>
